user list and profile

--- a/social-app/CrazyIndeed/Base.lproj/Main.storyboard
+++ b/social-app/CrazyIndeed/Base.lproj/Main.storyboard
@@ -205,6 +205,7 @@
                     </view>
                     <connections>
                         <outlet property="users" destination="MaQ-K5-6cv" id="nAn-AO-jjw"/>
+                        <segue destination="wFW-y1-GqS" kind="presentation" identifier="toUserInformation" id="R4Q-pf-DaH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gGo-VU-kVr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -621,7 +622,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zipper3" translatesAutoresizingMaskIntoConstraints="NO" id="mWc-4J-BbK">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
                             </imageView>
                             <view alpha="0.94999999999999996" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Iu-al-kt4">
                                 <rect key="frame" x="135" y="72" width="224" height="128"/>
@@ -689,6 +690,21 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="cardDesign" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
+                            <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5P-Ew-q43">
+                                <rect key="frame" x="0.0" y="72" width="46" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="M7P-XK-LEY"/>
+                                    <constraint firstAttribute="width" constant="44" id="xCM-gn-AiP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="X">
+                                    <color key="titleColor" red="1" green="0.1751432171" blue="0.074007075199999994" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="backToUsersPressed:" destination="wFW-y1-GqS" eventType="touchUpInside" id="yw1-44-ExP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -702,9 +718,11 @@
                             <constraint firstItem="mWc-4J-BbK" firstAttribute="top" secondItem="M2c-gY-bPJ" secondAttribute="bottom" id="LgG-dA-KBS"/>
                             <constraint firstItem="0Iu-al-kt4" firstAttribute="top" secondItem="3PX-7b-ezY" secondAttribute="top" id="O3K-DE-aHP"/>
                             <constraint firstItem="bsq-l3-X0q" firstAttribute="top" secondItem="mWc-4J-BbK" secondAttribute="bottom" id="PtU-Dj-KON"/>
+                            <constraint firstItem="J5P-Ew-q43" firstAttribute="leading" secondItem="pN1-G4-gYE" secondAttribute="leading" id="Tne-ie-AIK"/>
                             <constraint firstItem="3PX-7b-ezY" firstAttribute="leading" secondItem="pN1-G4-gYE" secondAttribute="leading" constant="10" id="fQN-Ny-4xm"/>
                             <constraint firstItem="KJH-9T-lBX" firstAttribute="top" secondItem="0Iu-al-kt4" secondAttribute="bottom" constant="10" id="qAR-jG-g7T"/>
                             <constraint firstItem="KJH-9T-lBX" firstAttribute="leading" secondItem="3PX-7b-ezY" secondAttribute="leading" id="tvt-cO-Ksd"/>
+                            <constraint firstItem="J5P-Ew-q43" firstAttribute="top" secondItem="M2c-gY-bPJ" secondAttribute="bottom" constant="52" id="yvN-ha-Qbf"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -719,6 +737,7 @@
                     <connections>
                         <outlet property="aboutField" destination="KJH-9T-lBX" id="zyX-yg-GWf"/>
                         <outlet property="ageLab" destination="wlq-Pm-gGK" id="IC9-eY-XNR"/>
+                        <outlet property="backToUsers" destination="J5P-Ew-q43" id="SRV-Ri-naC"/>
                         <outlet property="locationLab" destination="XYV-f8-DAl" id="q9F-UQ-P8m"/>
                         <outlet property="profileImage" destination="3PX-7b-ezY" id="JY5-9Z-Mvg"/>
                         <outlet property="sexLab" destination="P1J-Dx-V5K" id="EKk-pA-huO"/>
@@ -979,4 +998,7 @@
         <image name="legal" width="350" height="489"/>
         <image name="zipper3" width="800" height="556"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="R4Q-pf-DaH"/>
+    </inferredMetricsTieBreakers>
 </document>
